Stop text from spilling out of card

--- a/src/views/CardsView.scss
+++ b/src/views/CardsView.scss
@@ -58,7 +58,10 @@
 }
 
 .CardsView-Card-Text {
-  flex: 1 1 auto;
+  flex: 1 0 0;
+  min-height: 0;
+  overflow: hidden;
+  /* How to add ellipsis? */
 }
 
 .CardsView-Card-Details {
